# slashpad

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  HANDOFF.md  LICENSE  README.md  build.rs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.claude/: settings.json
.claude/hooks/: cargo-check.sh  cargo-clippy.sh
.claude/skills/release/: SKILL.md
.github/workflows/: release.yml
Formula/: slashpad.rb
agent/: runner.mjs
bundled-prompts/: CLAUDE.md
icons/: icon.icns
macos/: Info.plist
scripts/: build-app.sh  create-dmg.sh  generate-icon.py  release.sh  sign-and-notarize.sh
skills/: emails.yaml
src/: App.tsx  TraySettings.tsx  app.rs  fuzzy.rs  hotkey.rs  main.rs  main.tsx  markdown.rs  projects.rs  secrets.rs  sessions.rs  settings.rs  skills.rs  state.rs  terminal.rs  tray.rs  updates.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: ChatPanel.tsx  CommandInput.tsx  HotkeyRecorder.tsx  ResultsPanel.tsx  SaveSkillDialog.tsx  SessionList.tsx  Settings.tsx  SkillList.tsx  ToolLine.tsx
src/hooks/: usePalette.ts
src/lib/: agent.ts  sessionManager.ts  skills.ts  types.ts
src/platform/: login_item.m  macos.rs  mod.rs  stub.rs
src/sidecar/: events.rs  mod.rs  payload.rs  process.rs
src/styles/: globals.css
src/ui/: chat_panel.rs  command_input.rs  idle_list.rs  keyhints.rs  mod.rs  project_picker.rs  selectable_bubble.rs  selectable_markdown.rs  selectable_rich_text.rs  session_list.rs  session_options_menu.rs  settings.rs  shortcut_filter.rs  skill_list.rs  terminal_input.rs  theme.rs  tool_line.rs
