[package]
name = "slashpad"
version = "0.1.39"
edition = "2021"
description = "A desktop AI command palette powered by Claude"
license = "MIT"
repository = "https://github.com/agencyenterprise/slashpad"
homepage = "https://github.com/agencyenterprise/slashpad"

[[bin]]
name = "slashpad"
path = "src/main.rs"

[dependencies]
iced = { version = "0.13", features = ["tokio", "advanced", "image", "markdown"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
pulldown-cmark = { version = "0.12", default-features = false }
nucleo-matcher = "0.3"
global-hotkey = "0.6"
tray-icon = "0.19"
walkdir = "2"
directories = "5"
base64 = "0.22"
anyhow = "1"
thiserror = "1"
include_dir = "0.7"
raw-window-handle = "0.6"
futures = "0.3"
image = { version = "0.24", default-features = false, features = ["png"] }
keyring = { version = "3", features = ["apple-native"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = [
    "NSWindow",
    "NSPanel",
    "NSApplication",
    "NSScreen",
    "NSEvent",
    "NSColor",
    "NSResponder",
    "NSView",
] }
objc2-foundation = { version = "0.2", features = [
    "NSString",
    "NSGeometry",
    "NSArray",
    "NSThread",
] }

[profile.release]
opt-level = 3
lto = true
strip = true
